Fixes logo issue on mobile, update category

--- a/themes/ashleykolodziej/src/_non-critical.scss
+++ b/themes/ashleykolodziej/src/_non-critical.scss
@@ -1,27 +1,3 @@
-/* fallback */
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(https://fonts.gstatic.com/s/materialicons/v22/2fcrYFNaTjcS6g4U3t-Y5UEw0lE80llgEseQY3FEmqw.woff2) format('woff2');
-}
-
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -moz-font-feature-settings: 'liga';
-  -moz-osx-font-smoothing: grayscale;
-}
-
 %container-styles {
 	@include breakpoint(sm) {
 		max-width: $container-SM;
@@ -130,6 +106,8 @@
 	h1 {
 		@extend %container-styles;
 		max-width: 960px;
+		margin-left: auto;
+		margin-right: auto;
 		font-size: 7vw;
 		line-height: 1;
 		color: #fff;
@@ -769,4 +747,8 @@ h2.f4.text-normal.mb-3 {
 
 .float-left.text-gray {
     float: left;
+}
+
+.main-navigation .cat-professional-speaking--writing {
+	margin-right: 0;
 }
